rewrote api with sqllite support

--- a/hashapi/Dockerfile
+++ b/hashapi/Dockerfile
@@ -1,9 +1,8 @@
-FROM python:3.9.1
-WORKDIR /hash
+FROM python:3.8-slim
+
+WORKDIR /app
+COPY requirements.txt ./
+RUN pip3 install --no-cache-dir -r requirements.txt
+
 COPY . .
-
-RUN pip install -r requirements.txt
-
-
-
-
+EXPOSE 8000
