--- a/hashapi/docker-compose.yml
+++ b/hashapi/docker-compose.yml
@@ -1,16 +1,17 @@
-version: "3.9"
+version: "3"
+
 services:
-  hash:
+  hashapi:
     image: 'spai22/hashapi'
-    command: bash -c "gunicorn --bind 0.0.0.0:5000 wsgi:app --daemon && gunicorn --bind 0.0.0.0:8090 main:app -k uvicorn.workers.UvicornWorker"
-    restart: unless-stopped
+    command:  uvicorn main:app --workers 1 --host 0.0.0.0 --port 8090
     ports:
-      - "5000:5000"
       - "8090:8090"
+    networks:
+      - hash_network
     environment:
       HASHCMD: hash
-      HASHFILECMD: hashfile
+      HASHFILECMD: validate
 
-
-
-
+networks:
+  hash_network:
+    driver: bridge
