--- a/hashapi/docker-compose.yml
+++ b/hashapi/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   hashapi:
     image: 'spai22/hashapi'
     command:  uvicorn main:app --workers 1 --host 0.0.0.0 --port 8090
+    restart: unless-stopped
     ports:
       - "8090:8090"
     networks:
