--- a/ergopay/build.gradle
+++ b/ergopay/build.gradle
@@ -21,7 +21,7 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.ergoplatform:ergo-appkit_2.11:develop-71491aed-SNAPSHOT'
+	implementation 'org.ergoplatform:ergo-appkit_2.12:4.0.10'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
