--- a/ergopay/docker-compose.yml
+++ b/ergopay/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.9"
 services:
   hash:
-    image: 'spai22/ergopay'
+    buils: .
     restart: unless-stopped
     ports:
       - "8085:8085"
